--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -60,6 +60,8 @@ body {
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
+
+  backface-visibility: hidden; /* used to fix shake during animation */
 }
 
 .heading-primary-main {
@@ -83,6 +85,8 @@ body {
   font-size: 20px;
   font-weight: 700;
   letter-spacing: 17.4px;
+
+  animation: moveInRight 1s ease-out;
 }
 
 /* entrance animation */
@@ -95,6 +99,22 @@ body {
 
   80% {
     transform: translateX(10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+
+  80% {
+    transform: translateX(-10px);
   }
 
   100% {
