--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -121,6 +121,17 @@ body {
   }
 }
 
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
 .btn:link,
 .btn:visited {
   text-transform: uppercase;
@@ -129,6 +140,8 @@ body {
   display: inline-block;
   border-radius: 100px;
   transition: all .2s; /* shorthand for transitions */
+
+  position: relative;
 }
 
 .btn:hover {
@@ -145,4 +158,32 @@ body {
 .btn-white {
   background-color: #fff;
   color: #777;
+}
+
+/* after pseudo-element treated as child of parent */
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s;
+}
+
+.btn-white::after {
+  background-color: #fff;
+}
+
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+.btn-animated {
+  animation: moveInBottom .5s ease-out .75s;
+  animation-fill-mode: backwards; /* applies 0% state before animation starts */
 }
