--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -9,20 +9,31 @@ Dark green: #28b485
 
 /* CSS Reset */
 
-* {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; /* borders & padding no longer added to total width or height */
+  /* box-sizing property is not inherited by default */
+  box-sizing: inherit; /* force inheritance */
+}
+
+html {
+  /* Set root font-size */
+  /* Bad practice to set root to px b/c overrides user's default browser font-size setting */
+  font-size: 62.5%; /* Good practice to use 62.5% of browser default 16px = 10px */
 }
 
 body {
   /* font-related properties */
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  font-size: 16px;
+  /* font-size: 16px; */
   line-height: 1.7;
   color: #777;
-  padding: 30px;
+  padding: 3rem;
+
+  box-sizing: border-box; /* borders & padding no longer added to total width or height */
 }
 
 .header {
@@ -41,12 +52,12 @@ body {
 
 .logo-box {
   position: absolute;
-  top: 40px;
-  left: 40px;
+  top: 4rem;
+  left: 4rem;
 }
 
 .logo {
-  height: 35px;
+  height: 3.5rem;
 }
 
 .text-box {
@@ -63,14 +74,14 @@ body {
   text-transform: uppercase;
 
   backface-visibility: hidden; /* used to fix shake during animation */
-  margin-bottom: 60px;
+  margin-bottom: 6rem;
 }
 
 .heading-primary-main {
   display: block;
-  font-size: 60px;
+  font-size: 6rem;
   font-weight: 400;
-  letter-spacing: 35px;
+  letter-spacing: 3.5rem;
 
   animation-name: moveInLeft;
   animation-duration: 1s;
@@ -84,9 +95,9 @@ body {
 
 .heading-primary-sub {
   display: block;
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 700;
-  letter-spacing: 17.4px;
+  letter-spacing: 1.75rem;
 
   animation: moveInRight 1s ease-out;
 }
@@ -96,10 +107,10 @@ body {
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(-100px);
+    transform: translateX(-10rem);
   }
   80% {
-    transform: translateX(10px);
+    transform: translateX(1rem);
   }
   100% {
     opacity: 1;
@@ -110,10 +121,10 @@ body {
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(100px);
+    transform: translateX(10rem);
   }
   80% {
-    transform: translateX(-10px);
+    transform: translateX(-1rem);
   }
   100% {
     opacity: 1;
@@ -124,7 +135,7 @@ body {
 @keyframes moveInBottom {
   0% {
     opacity: 0;
-    transform: translateY(30px);
+    transform: translateY(3rem);
   }
   100% {
     opacity: 1;
@@ -136,23 +147,24 @@ body {
 .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
-  padding: 15px 40px;
+  padding: 1.5rem 4rem;
   display: inline-block;
-  border-radius: 100px;
+  border-radius: 10rem;
   transition: all .2s; /* shorthand for transitions */
 
   position: relative;
+  font-size: 1.6rem;
 }
 
 .btn:hover {
   transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(0,0,0,.2); /* offset-x | offset-y | blur-radius | color */
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.2); /* offset-x | offset-y | blur-radius | color */
 }
 
 .btn:active {
   transform: translateY(-1px);
   /* reduce box-shadow on click to give button-press effect */
-  box-shadow: 0 5px 10px rgba(0,0,0,.2);
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
 }
 
 .btn-white {
@@ -161,12 +173,13 @@ body {
 }
 
 /* after pseudo-element treated as child of parent */
+
 .btn::after {
   content: "";
   display: inline-block;
   height: 100%;
   width: 100%;
-  border-radius: 100px;
+  border-radius: 10rem;
   position: absolute;
   top: 0;
   left: 0;
