--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -2,6 +2,8 @@ $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 
+$color-grey-dark: #777;
+
 /* CSS Reset */
 *,
 *::after,
@@ -24,7 +26,7 @@ body {
   font-weight: 400;
   /* font-size: 16px; */
   line-height: 1.7;
-  color: #777;
+  color: $color-grey-dark;
   padding: 3rem;
 
   box-sizing: border-box; /* borders & padding no longer added to total width or height */
@@ -163,7 +165,7 @@ body {
 
 .btn--white {
   background-color: #fff;
-  color: #777;
+  color: $color-grey-dark;
 }
 
 /* after pseudo-element treated as child of parent */
