--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -3,6 +3,8 @@ $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 
 $color-grey-dark: #777;
+$color-white: #fff;
+
 
 /* CSS Reset */
 *,
@@ -66,7 +68,7 @@ body {
 }
 
 .heading-primary {
-  color: #fff;
+  color: $color-white;
   text-transform: uppercase;
 
   backface-visibility: hidden; /* used to fix shake during animation */
@@ -164,7 +166,7 @@ body {
 }
 
 .btn--white {
-  background-color: #fff;
+  background-color: $color-white;
   color: $color-grey-dark;
 }
 
@@ -184,7 +186,7 @@ body {
 }
 
 .btn--white::after {
-  background-color: #fff;
+  background-color: $color-white;
 }
 
 .btn:hover::after {
