--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -1,76 +1,3 @@
-/* CSS Reset */
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-  /* box-sizing property not inherited by default; forces inheritance */ }
-
-html {
-  /* Set root font-size; Bad practice to set root to px b/c overrides user's default browser font-size setting */
-  font-size: 62.5%;
-  /* Good practice to use 62.5% of browser default 16px = 10px */ }
-
-body {
-  /* font-related properties */
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  line-height: 1.7;
-  color: #777;
-  padding: 3rem;
-  box-sizing: border-box;
-  /* borders & padding no longer added to total width or height */ }
-
-.header {
-  height: 95vh;
-  /* 95% of viewport height */
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
-  background-size: cover;
-  /* scales to cover container, crops img */
-  background-position: top;
-  position: relative;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  /* clockwise direction */ }
-  .header__logo-box {
-    position: absolute;
-    top: 4rem;
-    left: 4rem; }
-  .header__logo {
-    height: 3.5rem; }
-  .header__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    /* center element by shifting x & y */
-    text-align: center; }
-
-.heading-primary {
-  color: #fff;
-  text-transform: uppercase;
-  backface-visibility: hidden;
-  /* used to fix shake during animation */
-  margin-bottom: 6rem; }
-  .heading-primary--main {
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-    animation-name: moveInLeft;
-    animation-duration: 1s;
-    animation-timing-function: ease-out;
-    /*
-    animation-delay: 3s;
-    animation-iteration-count: 3;
-    */ }
-  .heading-primary--sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.75rem;
-    animation: moveInRight 1s ease-out; }
-
 /* Entrance animation */
 /* For browser performance, best to only animate 2 different properties */
 @keyframes moveInLeft {
@@ -100,6 +27,59 @@ body {
   100% {
     opacity: 1;
     transform: translate(0); } }
+
+/* CSS Reset */
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+  /* box-sizing property not inherited by default; forces inheritance */ }
+
+html {
+  /* Set root font-size; defines what 1rem is */
+  /* Bad practice to set root to px b/c overrides user's default browser font-size setting */
+  font-size: 62.5%;
+  /* Good practice to use 62.5% of browser default 16px = 10px */ }
+
+body {
+  box-sizing: border-box;
+  /* borders & padding no longer added to total width or height */ }
+
+body {
+  /* font-related properties */
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  /* font-size: 16px; */
+  line-height: 1.7;
+  color: #777;
+  padding: 3rem; }
+
+.heading-primary {
+  color: #fff;
+  text-transform: uppercase;
+  backface-visibility: hidden;
+  /* used to fix shake during animation */
+  margin-bottom: 6rem; }
+  .heading-primary--main {
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 3.5rem;
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+    /*
+    animation-delay: 3s;
+    animation-iteration-count: 3;
+    */ }
+  .heading-primary--sub {
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 1.75rem;
+    animation: moveInRight 1s ease-out; }
 
 .btn:link, .btn:visited {
   text-transform: uppercase;
@@ -147,3 +127,27 @@ body {
   animation: moveInBottom .5s ease-out .75s;
   animation-fill-mode: backwards;
   /* applies 0% state before animation starts */ }
+
+.header {
+  height: 95vh;
+  /* 95% of viewport height */
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
+  background-size: cover;
+  /* scales to cover container, crops img */
+  background-position: top;
+  position: relative;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  /* clockwise direction */ }
+  .header__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+  .header__logo {
+    height: 3.5rem; }
+  .header__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* center element by shifting x & y */
+    text-align: center; }
