--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -7,192 +7,8 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/button";
+
+@import "layout/header";
+
 @import "pages/home";
-
-
-/* CSS Reset */
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit; /* box-sizing property not inherited by default; forces inheritance */
-}
-
-html {
-  /* Set root font-size; Bad practice to set root to px b/c overrides user's default browser font-size setting */
-  font-size: 62.5%; /* Good practice to use 62.5% of browser default 16px = 10px */
-}
-
-body { /* font-related properties */
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  line-height: 1.7;
-  color: $color-grey-dark;
-  padding: 3rem;
-
-  box-sizing: border-box; /* borders & padding no longer added to total width or height */
-}
-
-.header {
-  height: 95vh; /* 95% of viewport height */
-  background-image: linear-gradient(
-    to right bottom,
-    rgba($color-primary-light, 0.8),
-    rgba($color-primary-dark, 0.8)),
-  url(../img/hero.jpg);
-  background-size: cover; /* scales to cover container, crops img */
-  background-position: top;
-  position: relative;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); /* clockwise direction */
-
-  &__logo-box {
-    position: absolute;
-    top: 4rem;
-    left: 4rem;
-  }
-
-  &__logo {
-    height: 3.5rem;
-  }
-  
-  &__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%); /* center element by shifting x & y */
-    text-align: center;
-  }
-}
-
-.heading-primary {
-  color: $color-white;
-  text-transform: uppercase;
-
-  backface-visibility: hidden; /* used to fix shake during animation */
-  margin-bottom: 6rem;
-
-  &--main {
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-  
-    animation-name: moveInLeft;
-    animation-duration: 1s;
-    animation-timing-function: ease-out;
-  
-    /*
-    animation-delay: 3s;
-    animation-iteration-count: 3;
-    */
-  }
-  
-  &--sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.75rem;
-  
-    animation: moveInRight 1s ease-out;
-  }
-}
-
-/* Entrance animation */
-/* For browser performance, best to only animate 2 different properties */
-@keyframes moveInLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-10rem);
-  }
-  80% {
-    transform: translateX(1rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
-}
-
-@keyframes moveInRight {
-  0% {
-    opacity: 0;
-    transform: translateX(10rem);
-  }
-  80% {
-    transform: translateX(-1rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
-}
-
-@keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(3rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
-}
-
-.btn {
-  &:link,
-  &:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    border-radius: 10rem;
-    transition: all .2s; /* shorthand for transitions */
-    position: relative;
-    font-size: 1.6rem;
-  }
-
-  &:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 1rem 2rem rgba($color-black,.2); /* offset-x | offset-y | blur-radius | color */
-    
-    &::after {
-      transform: scaleX(1.4) scaleY(1.6);
-      opacity: 0;
-    }
-  }
-
-  &:active {
-    transform: translateY(-1px);
-    /* reduce box-shadow on click to give button-press effect */
-    box-shadow: 0 .5rem 1rem rgba($color-black,.2);
-  }
-
-  &--white {
-    background-color: $color-white;
-    color: $color-grey-dark;
-
-    &::after {
-      background-color: $color-white;
-    }
-  }
-
-  &::after {
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 10rem;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all .4s;
-  }
-
-  &--animated {
-    animation: moveInBottom .5s ease-out .75s;
-    animation-fill-mode: backwards; /* applies 0% state before animation starts */
-  }
-
-}
