--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -128,6 +128,12 @@ body {
   animation-fill-mode: backwards;
   /* applies 0% state before animation starts */ }
 
+.row {
+  max-width: 114rem;
+  background-color: #eee;
+  margin: 0 auto;
+  margin-bottom: 80px; }
+
 .header {
   height: 95vh;
   /* 95% of viewport height */
